--- a/common/packages.tex
+++ b/common/packages.tex
@@ -237,3 +237,8 @@
         \tikzset{external/up to date check={diff}}
     \fi
 }{}
+
+%%% Моё %%%
+\usepackage{hhline}
+\usepackage{morefloats}
+\extrafloats{100}
