добавил общую информацию и главу 4 (без ссылок)
компиляция падает из-за ссылок в главе 4, скоро поправлю

--- a/common/newnames.tex
+++ b/common/newnames.tex
@@ -11,17 +11,17 @@
 \newcommand{\aimTXT}{Целью}
 \newcommand{\tasksTXT}{задачи}
 % научную новизну;
-\newcommand{\noveltyTXT}{Научная новизна:}
+\newcommand{\noveltyTXT}{Научная новизна.}
 % теоретическую и практическую значимость работы;
 %\newcommand{\influenceTXT}{Теоретическая и практическая значимость}
 % или чаще используют просто
-\newcommand{\influenceTXT}{Практическая значимость}
+\newcommand{\influenceTXT}{Практическая значимость.}
 % методологию и методы исследования;
 \newcommand{\methodsTXT}{Методология и методы исследования.}
 % положения, выносимые на защиту;
 \newcommand{\defpositionsTXT}{Основные положения, выносимые на~защиту:}
 % степень достоверности и апробацию результатов.
-\newcommand{\reliabilityTXT}{Достоверность}
+\newcommand{\reliabilityTXT}{Достоверность результатов}
 \newcommand{\probationTXT}{Апробация работы.}
 
 \newcommand{\contributionTXT}{Личный вклад.}
@@ -31,7 +31,7 @@
 %%% Заголовки библиографии:
 
 % для автореферата:
-\newcommand{\bibtitleauthor}{Публикации автора по теме диссертации}
+\newcommand{\bibtitleauthor}{}
 
 % для стиля библиографии `\insertbiblioauthorgrouped`
 \newcommand{\bibtitleauthorvak}{В изданиях из списка ВАК РФ}
