--- a/common/data.tex
+++ b/common/data.tex
@@ -1,7 +1,7 @@
 %%% Основные сведения %%%
-\newcommand{\thesisAuthorLastName}{\todo{Фамилия}}
-\newcommand{\thesisAuthorOtherNames}{\todo{Имя Отчество}}
-\newcommand{\thesisAuthorInitials}{\todo{И.\,О.}}
+\newcommand{\thesisAuthorLastName}{Полиев}
+\newcommand{\thesisAuthorOtherNames}{Александр Владимирович}
+\newcommand{\thesisAuthorInitials}{А.\,В.}
 \newcommand{\thesisAuthor}             % Диссертация, ФИО автора
 {%
     \texorpdfstring{% \texorpdfstring takes two arguments and uses the first for (La)TeX and the second for pdf
@@ -12,49 +12,49 @@
 }
 \newcommand{\thesisAuthorShort}        % Диссертация, ФИО автора инициалами
 {\thesisAuthorInitials~\thesisAuthorLastName}
-%\newcommand{\thesisUdk}                % Диссертация, УДК
-%{\todo{xxx.xxx}}
+\newcommand{\thesisUdk}                % Диссертация, УДК
+{004.934:629.7.05}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\todo{Длинное название диссертационной работы, состоящее из~достаточно большого
-количества слов, совсем длинное длинное длинное длинное название, из~которого
-простому обывателю знакомы, в~лучшем случае, лишь отдельные слова}}
+{Разработка алгоритмов для распознавания команд речевого интерфейса кабины пилота}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
-{\todo{XX.XX.XX}}
+{05.13.01}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название (название взято с сайта ВАК для примера)
-{\todo{Технология обработки, хранения и~переработки злаковых, бобовых культур,
-крупяных продуктов, плодоовощной продукции и~виноградарства}}
+{Системный анализ, управление и обработка информации}
 %% \newcommand{\thesisSpecialtyTwoNumber} % Диссертация, вторая специальность, номер
 %% {\todo{XX.XX.XX}}
 %% \newcommand{\thesisSpecialtyTwoTitle}  % Диссертация, вторая специальность, название
 %% {\todo{Теория и~методика физического воспитания, спортивной тренировки,
 %% оздоровительной и~адаптивной физической культуры}}
 \newcommand{\thesisDegree}             % Диссертация, ученая степень
-{\todo{кандидата физико-математических наук}}
+{кандидата технических наук}
 \newcommand{\thesisDegreeShort}        % Диссертация, ученая степень, краткая запись
-{\todo{канд. физ.-мат. наук}}
+{канд. техн. наук}
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
-{\todo{Город}}
+{Москва}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
-{\todo{20XX}}
+{2019}
 \newcommand{\thesisOrganization}       % Диссертация, организация
-{\todo{Федеральное государственное автономное образовательное учреждение высшего
-образования <<Длинное название образовательного учреждения <<АББРЕВИАТУРА>>}}
+{Федеральное государственное автономное образовательное учреждение \\
+высшего образования <<Московский физико-технический институт \\
+(национальный исследовательский университет)>> \\
+Кафедра управляющих и информационных систем}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
-{\todo{НазУчДисРаб}}
+{МФТИ}
 
 \newcommand{\thesisInOrganization}     % Диссертация, организация в предложном падеже: Работа выполнена в ...
-{\todo{учреждении с~длинным длинным длинным длинным названием, в~котором
-выполнялась данная диссертационная работа}}
+{кафедре управляющих и информационных систем
+Московского физико-технического института
+(национального исследовательского университета)}
 
 %% \newcommand{\supervisorDead}{}           % Рисовать рамку вокруг фамилии
 \newcommand{\supervisorFio}              % Научный руководитель, ФИО
-{\todo{Фамилия Имя Отчество}}
+{Корсун Олег Николаевич}
 \newcommand{\supervisorRegalia}          % Научный руководитель, регалии
-{\todo{уч. степень, уч. звание}}
+{доктор технических наук, профессор}
 \newcommand{\supervisorFioShort}         % Научный руководитель, ФИО
-{\todo{И.\,О.~Фамилия}}
+{О.\,Н.~Корсун}
 \newcommand{\supervisorRegaliaShort}     % Научный руководитель, регалии
-{\todo{уч.~ст.,~уч.~зв.}}
+{д-р~техн.~наук,~проф.}
 
 %% \newcommand{\supervisorTwoDead}{}        % Рисовать рамку вокруг фамилии
 %% \newcommand{\supervisorTwoFio}           % Второй научный руководитель, ФИО
@@ -94,24 +94,23 @@
 %% {\todo{старший научный сотрудник}}
 
 \newcommand{\leadingOrganizationTitle} % Ведущая организация, дополнительные строки. Удалить, чтобы не отображать в автореферате
-{\todo{Федеральное государственное бюджетное образовательное учреждение высшего
-профессионального образования с~длинным длинным длинным длинным названием}}
+{\todo{Федеральное государственное бюджетное образовательное учреждение высшего профессионального образования с~длинным длинным длинным длинным названием}}
 
 \newcommand{\defenseDate}              % Защита, дата
 {\todo{DD mmmmmmmm YYYY~г.~в~XX часов}}
 \newcommand{\defenseCouncilNumber}     % Защита, номер диссертационного совета
-{\todo{Д\,123.456.78}}
+{Д\,212.125.12}
 \newcommand{\defenseCouncilTitle}      % Защита, учреждение диссертационного совета
-{\todo{Название учреждения}}
+{Московском авиационном институте (национальном исследовательском университете)}
 \newcommand{\defenseCouncilAddress}    % Защита, адрес учреждение диссертационного совета
-{\todo{Адрес}}
+{125993, Москва, A-80, ГСП-3, Волоколамское шоссе, д. 4}
 \newcommand{\defenseCouncilPhone}      % Телефон для справок
-{\todo{+7~(0000)~00-00-00}}
+{+7~499~158-43-55}
 
 \newcommand{\defenseSecretaryFio}      % Секретарь диссертационного совета, ФИО
-{\todo{Фамилия Имя Отчество}}
+{Старков Александр Владимирович}
 \newcommand{\defenseSecretaryRegalia}  % Секретарь диссертационного совета, регалии
-{\todo{д-р~физ.-мат. наук}}            % Для сокращений есть ГОСТы, например: ГОСТ Р 7.0.12-2011 + http://base.garant.ru/179724/#block_30000
+{канд.~техн.~наук}            		   % Для сокращений есть ГОСТы, например: ГОСТ Р 7.0.12-2011 + http://base.garant.ru/179724/#block_30000
 
 \newcommand{\synopsisLibrary}          % Автореферат, название библиотеки
 {\todo{Название библиотеки}}
