--- a/dissertation.tex
+++ b/dissertation.tex
@@ -68,18 +68,18 @@
 \include{Dissertation/part3}           % Глава 3
 \include{Dissertation/part4}           % Глава 4
 \include{Dissertation/conclusion}      % Заключение
-\include{Dissertation/acronyms}        % Список сокращений и условных обозначений
-\include{Dissertation/dictionary}      % Словарь терминов
+%\include{Dissertation/acronyms}	   % Список сокращений и условных обозначений
+%\include{Dissertation/dictionary}	   % Словарь терминов
 \include{Dissertation/references}      % Список литературы
-\include{Dissertation/lists}           % Списки таблиц и изображений (иллюстративный материал)
+%\include{Dissertation/lists}          % Списки таблиц и изображений (иллюстративный материал)
 
 %%% Настройки для приложений
-\appendix
+%\appendix
 % Оформление заголовков приложений ближе к ГОСТ:
 \setlength{\midchapskip}{20pt}
 \renewcommand*{\afterchapternum}{\par\nobreak\vskip \midchapskip}
 \renewcommand\thechapter{\Asbuk{chapter}} % Чтобы приложения русскими буквами нумеровались
 
-\include{Dissertation/appendix}        % Приложения
+%\include{Dissertation/appendix}        % Приложения
 
 \end{document}
