--- a/presentation.tex
+++ b/presentation.tex
@@ -1,8 +1,6 @@
-%&preformat-present
-
-\newif\ifpresentation % Условие, проверяющее, что документ --- презентация
+﻿\newif\ifpresentation % Условие, проверяющее, что документ --- презентация
 \presentationtrue
-\documentclass[10pt, xcolor={dvipsnames, table, hyperref}]{beamer}
+\documentclass[14pt, xcolor={dvipsnames, table, hyperref}]{beamer}
 
 \input{common/setup}               % Общие настройки шаблона
 \input{common/packages}            % Пакеты общие для диссертации и автореферата
@@ -10,24 +8,18 @@
 \input{common/fonts}               % Определение шрифтов (частичное)
 
 \input{Presentation/setup}         % Настройки презентации
-\input{Presentation/prespackages}  % Библиотеки презентации
-\input{Presentation/styles}        % Стили презентации
-\input{Presentation/title}         % Настройки заглавной странице
-
-%%% Библиография. Выбор движка для реализации %%%
-\ifnumequal{\value{bibliosel}}{0}{%
-    \input{biblio/predefined}   % Встроенная реализация с загрузкой файла через движок bibtex8
-}{
-    \input{biblio/biblatex}     % Реализация пакетом biblatex через движок biber
-}
-
-% Вывести информацию о версиях используемых библиотек в лог сборки
-\listfiles
+\input{Presentation/prespreamble}  % Инициализация переменных
 
 \begin{document}
-\input{Presentation/preamble}      % Первые слайды презентации
-\input{Presentation/content}       % Настройки заглавной странице
-\input{Presentation/conclusion}    % Последние слайды презентации
-\appendix
-\input{Presentation/appendix}      % Запасные слайды презентации
+
+{
+\setbeamertemplate{footline}{} 
+\begin{frame}[noframenumbering]
+	\setcounter{framenumber}{1}
+	\maketitle
+\end{frame}
+}
+
+\logo{}
+\input{Presentation/prescontent}
 \end{document}
