--- a/Synopsis/setup.tex
+++ b/Synopsis/setup.tex
@@ -9,13 +9,14 @@
 \newcounter{showperssign}
 \newcounter{showsecrsign}
 \newcounter{showopplead}
+\newcounter{usefootcite}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%% Список публикаций %%%
 \makeatletter
 \@ifundefined{c@usefootcite}{
   \newcounter{usefootcite}
-  \setcounter{usefootcite}{0} % 0 --- два списка литературы;
+  \setcounter{usefootcite}{1} % 0 --- два списка литературы;
                               % 1 --- список публикаций автора + цитирование
                               %       других работ в сносках
 }{}
@@ -58,13 +59,13 @@
                                         % "--- здесь не работает
 
 %Демонстрация подписи диссертанта на автореферате
-\setcounter{showperssign}{1}  % 0 --- не показывать;
+\setcounter{showperssign}{0}  % 0 --- не показывать;
                               % 1 --- показывать
 %Демонстрация подписи учёного секретаря на автореферате
-\setcounter{showsecrsign}{1}  % 0 --- не показывать;
+\setcounter{showsecrsign}{0}  % 0 --- не показывать;
                               % 1 --- показывать
 %Демонстрация информации об оппонентах и ведущей организации на автореферате
-\setcounter{showopplead}{1}   % 0 --- не показывать;
+\setcounter{showopplead}{0}   % 0 --- не показывать;
                               % 1 --- показывать
 
 %%% Цвета гиперссылок %%%
