--- a/synopsis.tex
+++ b/synopsis.tex
@@ -55,7 +55,7 @@
     \thesisTitle
     \par\medskip
 
-    Автореф. дис. на соискание ученой степени \thesisDegreeShort
+    Автореф. дис. на соискание учёной степени \thesisDegreeShort
     \par\bigskip
 
     Подписано в печать \blank[\widthof{999}].\blank[\widthof{999}].\blank[\widthof{99999}].
