--- a/Dissertation/part4.tex
+++ b/Dissertation/part4.tex
@@ -17,11 +17,11 @@
 Отсюда можно сделать вывод, что все результаты являются примерными и могут не воспроизводиться точь-в-точь при повторных запусках.
 
 Моделирование искусственных нейронных сетей проводилось в программном комплексе, написанном на языке программирования Python с использованием библиотек TensorFlow и TFLearn.
-%TensorFlow --- это низкоуровневая библиотека с открытым исходным кодом, разработанная для решения задач построения и обучения нейронных сетей \cite{tensorflow}.
-%TFLearn --- высокоуровневая библиотека для упрощения работы с нейронными сетями, является оболочкой для библиотеки TensorFlow \cite{tflearn}.
+TensorFlow --- это низкоуровневая библиотека с открытым исходным кодом, разработанная для решения задач построения и обучения нейронных сетей \cite{tensorflow}.
+TFLearn --- высокоуровневая библиотека для упрощения работы с нейронными сетями, является оболочкой для библиотеки TensorFlow \cite{tflearn}.
 Обе библиотеки могут производить вычисления как на центральном процессоре, так и на графическом процессоре.
 Использование последнего является приоритетным, так как такие процессоры содержат очень много малопроизводительных ядер, что хорошо подходит для процесса обучения нейронных сетей, алгоритм которого поддаётся эффективному распараллеливанию.
-%Для эффективного использования графического процессора в работе программы применяется программно-аппаратная архитектура параллельных вычислений CUDA, активно использующая приведённые выше подключаемые библиотеки \cite{cuda}.
+Для эффективного использования графического процессора в работе программы применяется программно-аппаратная архитектура параллельных вычислений CUDA, активно использующая приведённые выше подключаемые библиотеки \cite{cuda}.
 
 %\newpage
 %============================================================================================================================
@@ -329,8 +329,8 @@
 При этом количество элементов каждого класса в обучающей выборке не меньше 30.
 
 Хотя изначально свёрточные нейронные сети обучались на больших выборках, в последнее время были получены обнадёживающие результаты на обучающих выборках небольшого размера.
-%Например, в работе \cite{dieleman2015classifying} использовалось 27000 элементов из 121 несбалансированного класса для распознавания изображений, а в работе \cite{truong2018lightweight} была использована база данных CIFAR-10 \cite{cifar10} c 50000 элементами из 10 классов в обучающей выборке.
-%При этом, при соблюдении определённых условий свёрточные нейронные сети показывают хорошие результаты при обучении на маленьких выборках, размером 100--1000 элементов, даже при количестве обучаемых параметров порядка нескольких сотен тысяч \cite{beam2017cnn}.
+Например, в работе \cite{dieleman2015classifying} использовалось 27000 элементов из 121 несбалансированного класса для распознавания изображений, а в работе \cite{truong2018lightweight} была использована база данных CIFAR-10 \cite{cifar10} c 50000 элементами из 10 классов в обучающей выборке.
+При этом, при соблюдении определённых условий свёрточные нейронные сети показывают хорошие результаты при обучении на маленьких выборках, размером 100--1000 элементов, даже при количестве обучаемых параметров порядка нескольких сотен тысяч \cite{beam2017cnn}.
 Количество обновлений градиента на одной итерации равно числу элементов в обучающей выборке, следовательно, необходимо уделить особое внимание количеству итераций и убедиться в сходимости процесса обучения.
 Рекомендуется использовать функцию активации ReLU для более быстрого схождения процесса обучения и различные способы регуляризации для предотвращения переобучения.
 Все указанные рекомендации были применены в используемой свёрточной нейронной сети, что даёт позволило надеяться на хороший результат.
