--- a/Dissertation/title.tex
+++ b/Dissertation/title.tex
@@ -19,9 +19,8 @@
   \end{minipage}
 }{
 \begin{flushright}
-На правах рукописи
-
-%\textsl {УДК \thesisUdk}
+На правах рукописи \\
+\textsl {УДК \thesisUdk}
 \end{flushright}
 }
 %
