--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -157,7 +157,7 @@
 	howpublished="\url{https://www.cs.toronto.edu/~kriz/cifar.html}",
 	year={2018},
 	note="[Интернет; проверено 19 марта 2019 года]",
-	language={english},
+	language={russian},
 }
 
 @article{cooper1952some,
@@ -730,7 +730,7 @@
 	howpublished="\url{https://www.tensorflow.org}",
 	year={2018},
 	note="[Интернет; проверено 23 июля 2018 года]",
-	language={english},
+	language={russian},
 }
 
 @misc{tflearn,
@@ -738,7 +738,7 @@
 	howpublished="\url{http://tflearn.org}",
 	year={2018},
 	note="[Интернет; проверено 23 июля 2018 года]",
-	language={english},
+	language={russian},
 }
 
 @inproceedings{truong2018lightweight,
