--- a/Dissertation/disstyles.tex
+++ b/Dissertation/disstyles.tex
@@ -102,6 +102,7 @@
 %% Работа должна быть выполнена ... размером шрифта 12-14 пунктов (ГОСТ Р 7.0.11-2011, 5.3.8). То есть не должно быть надписей шрифтом более 14. Так и поставим.
 %% Эти установки будут давать одинаковый результат независимо от выбора базовым шрифтом 12 пт или 14 пт
 \newcommand{\basegostsectionfont}{\fontsize{14pt}{16pt}\selectfont\bfseries}
+\addto\captionsrussian{\renewcommand{\chaptername}{}}
 
 \makechapterstyle{thesisgost}{%
     \chapterstyle{default}
