--- a/Dissertation/introduction.tex
+++ b/Dissertation/introduction.tex
@@ -1,9 +1,9 @@
 \chapter*{Введение}                         % Заголовок
 \addcontentsline{toc}{chapter}{Введение}    % Добавляем его в оглавление
 
-\newcommand{\actuality}{}
-\newcommand{\progress}{}
-\newcommand{\aim}{{\textbf\aimTXT}}
+\newcommand{\actuality}{\textbf{\actualityTXT}}
+\newcommand{\progress}{\textbf{\progressTXT}}
+\newcommand{\aim}{\textbf{\aimTXT}}
 \newcommand{\tasks}{\textbf{\tasksTXT}}
 \newcommand{\novelty}{\textbf{\noveltyTXT}}
 \newcommand{\influence}{\textbf{\influenceTXT}}
@@ -16,12 +16,9 @@
 
 \input{common/characteristic} % Характеристика работы по структуре во введении и в автореферате не отличается (ГОСТ Р 7.0.11, пункты 5.3.1 и 9.2.1), потому её загружаем из одного и того же внешнего файла, предварительно задав форму выделения некоторым параметрам
 
-\textbf{Объем и структура работы.} Диссертация состоит из~введения, трёх глав,
-заключения и~двух приложений.
+\textbf{Объем и структура работы.} Диссертация состоит из введения, четырёх разделов и заключения.
 %% на случай ошибок оставляю исходный кусок на месте, закомментированным
-%Полный объём диссертации составляет  \ref*{TotPages}~страницу
-%с~\totalfigures{}~рисунками и~\totaltables{}~таблицами. Список литературы
-%содержит \total{citenum}~наименований.
+%Полный объём диссертации составляет  \ref*{TotPages}~страницу с~\totalfigures{}~рисунками и~\totaltables{}~таблицами. Список литературы содержит \total{citenum}~наименований.
 %
 Полный объём диссертации составляет
 \formbytotal{TotPages}{страниц}{у}{ы}{}, включая
