небольшие поправки к презе

--- a/Presentation/prespreamble.tex
+++ b/Presentation/prespreamble.tex
@@ -95,13 +95,13 @@
 \setbeamertemplate{title page}{%
 	\vbox{}
 	\vfill
-	\vskip0cm%<- added
+	\vskip-0.2cm%<- added
 	\begingroup
 	\centering
 	\begin{beamercolorbox}[sep=0pt,center]{institute}
-	\usebeamerfont{institute}\insertinstitute
+	\usebeamerfont{institute}\scriptsize{\insertinstitute}
 	\end{beamercolorbox}
-	\vskip2em\par
+	\vskip1.3em\par
 	\begin{beamercolorbox}[sep=0pt,center]{title}
 		\usebeamerfont{title}\inserttitle\par%
 		\ifx\insertsubtitle\@empty%
