--- a/common/data.tex
+++ b/common/data.tex
@@ -34,8 +34,9 @@
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
 {2019}
 \newcommand{\thesisOrganization}       % Диссертация, организация
-{Федеральное государственное автономное образовательное учреждение \\
-высшего образования <<Московский физико-технический институт \\
+{Федеральное государственное автономное \\
+образовательное учреждение высшего образования \\
+<<Московский физико-технический институт \\
 (национальный исследовательский университет)>> \\
 Кафедра управляющих и информационных систем}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
