--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -44,7 +44,11 @@
 	\item хорошее качество распознавания в условиях сильного шума.
 \end{itemize}
 
+% версия для автореферата
+%С учётом этих требований широко используемые скрытые марковские модели не подходят из-за низкого качества распознавания в условиях шума.
+% версия для диссертации
 С учётом этих требований широко используемые скрытые марковские модели не подходят из-за низкого качества распознавания в условиях шума \cite{korsun2013experimental}.
+
 Остальные две группы методов в настоящий момент не обеспечивают необходимой надёжности распознавания.
 По этой причине тема настоящей работы, направленной на совершенствование методов распознавания речевых команд с помощью сравнения с эталоном и с использованием нейронных сетей, является актуальной.
 Исследования, выполненные в рамках данной работы, направлены на решение таких практически значимых и актуальных задач, как предобработка входящего сигнала путём выделения однородных частей, улучшение качества эталонов с помощью выделения в них главных компонент и использование систем распознавания из нескольких эталонов.
