--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -502,20 +502,46 @@ P(H_i|A_k^{\Delta Z}) = \frac{P(H_i) P(A_k|H_i) P(\Delta Z|H_i)}{\sum_{j=1}^M P(
 \end{center} 
 
 \ifdefmacro{\microtypesetup}{\microtypesetup{protrusion=false}}{} % не рекомендуется применять пакет микротипографики к автоматически генерируемому списку литературы
+\urlstyle{rm}                               % ссылки URL обычным шрифтом
 \ifnumequal{\value{bibliosel}}{0}{% Встроенная реализация с загрузкой файла через движок bibtex8
-  \renewcommand{\bibname}{\large \bibtitleauthor}
-  \nocite{*}
-  \insertbiblioauthor           % Подключаем Bib-базы
-  %\insertbiblioexternal   % !!! bibtex не умеет работать с несколькими библиографиями !!!
+	\renewcommand{\bibname}{\large \bibtitleauthor}
+	\nocite{*}
+	\insertbiblioauthor           % Подключаем Bib-базы
+	%\insertbiblioexternal   % !!! bibtex не умеет работать с несколькими библиографиями !!!
 }{% Реализация пакетом biblatex через движок biber
-  \ifnumgreater{\value{usefootcite}}{0}{
-%  \nocite{*} % Невидимая цитата всех работ, позволит вывести все работы автора
-  \insertbiblioauthorcited      % Вывод процитированных в автореферате работ автора
-  }{
-  %\insertbiblioauthor           % Вывод всех работ автора
-%  \insertbiblioauthorgrouped    % Вывод всех работ автора, сгруппированных по источникам
-%  \insertbiblioauthorimportant  % Вывод наиболее значимых работ автора (определяется в файле characteristic во второй section)
-  %\insertbiblioexternal            % Вывод списка литературы, на которую ссылались в тексте автореферата
-  }
+	% Цитирования.
+	%  * Порядок перечисления определяет порядок в библиографии (только внутри подраздела, если `\insertbiblioauthorgrouped`).
+	%  * Если не соблюдать порядок "как для \printbibliography", нумерация в `\insertbiblioauthor` будет кривой.
+	%  * Если цитировать каждый источник отдельной командой --- найти некоторые ошибки будет проще.
+	
+	\ifnumgreater{\value{usefootcite}}{0}{
+		\begin{refcontext}[labelprefix={}]
+			\ifnum \value{bibgrouped}>0
+			\insertbiblioauthorgrouped    % Вывод всех работ автора, сгруппированных по источникам
+			\else
+			\insertbiblioauthor      % Вывод всех работ автора
+			\fi
+		\end{refcontext}
+	}{
+		\ifnum \value{citeexternal}>0
+		\begin{refcontext}[labelprefix=A]
+			\ifnum \value{bibgrouped}>0
+			\insertbiblioauthorgrouped    % Вывод всех работ автора, сгруппированных по источникам
+			\else
+			\insertbiblioauthor      % Вывод всех работ автора
+			\fi
+		\end{refcontext}
+		\else
+		\ifnum \value{bibgrouped}>0
+		\insertbiblioauthorgrouped    % Вывод всех работ автора, сгруппированных по источникам
+		\else
+		\insertbiblioauthor      % Вывод всех работ автора
+		\fi
+		\fi
+		%  \insertbiblioauthorimportant  % Вывод наиболее значимых работ автора (определяется в файле characteristic во второй section)
+		\begin{refcontext}[labelprefix={}]    \insertbiblioexternal            % Вывод списка литературы, на которую ссылались в тексте автореферата
+		\end{refcontext}
+	}
 }
 \ifdefmacro{\microtypesetup}{\microtypesetup{protrusion=true}}{}
+\urlstyle{tt}                               % возвращаем установки шрифта ссылок URL
