избавился от всех неизвестных слов

--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -282,12 +282,12 @@ f_i = f_{min} + \frac{f_{max} - f_{min}}{N_{frb}} \left(i + \frac{1}{2} \right),
 В настоящее время чаще всего используется сигмоидальная функция активации, которая определяется как $\phi(\nu) = 1 / (1 + e^{-\alpha \nu})$, где $\alpha$ --- некоторый параметр, оптимальное значение которого находится эмпирически.
 
 % мнослойный персептрон
-Одной из самых простых моделей искусственной нейронной сети является многослойный персептрон.
+Одной из самых простых моделей искусственных нейронных сетей является простая нейронная сеть с несколькими скрытыми слоями.
 Такая нейронная сеть состоит из множества входных узлов, образующих входной слой, одного или нескольких скрытых слоев вычислительных нейронов и одного выходного слоя нейронов.
 В такой сети каждый нейрон одного слоя соединён со всеми нейронами предыдущего и последующего слоёв.
-Слой, состоящий из таких нейронов, называется полносвязным слоем.
+Слой, состоящий из таких нейронов, называется полностью связанным слоем.
 Входной сигнал распространяется по сети в прямом направлении, от слоя к слою без обратных связей, поэтому такая сеть является нейронной сетью прямого распространения или статической сетью.
-Многослойные персептроны могут применяться для решения широкого круга сложных задач.
+Простые нейронные сети с несколькими скрытыми слоями могут применяться для решения широкого круга сложных задач.
 
 Нейронные сети имеют возможность обучаться, в чем и заключается одно из главных их преимуществ перед традиционными методами \cite{nikolenko2017}.
 Здесь обучение с учителем выполняется с помощью алгоритма обратного распространения ошибки, который является частным случаем алгоритма минимизации среднеквадратичной ошибки для случая отдельного линейного нейрона.
@@ -374,16 +374,16 @@ LSTM-блоки обычно содержат 3 <<вентиля>>, которы
 
 % сверточные нейронные сети
 Другим классом искусственных нейронных сетей являются глубокие нейронные сети --- это нейронные сети прямого распространения с большим числом скрытых слоёв.
-Одним из примеров глубоких нейронных сетей являются свёрточные нейронные сети, использующиеся при анализе изображений, распознавании речи и в других задачах \cite{lecun1995convolutional, abdel2014convolutional}.
+Одним из примеров глубоких нейронных сетей являются CNN (convolutional neural network, нейронные сети на основе свёртки), использующиеся при анализе изображений, распознавании речи и в других задачах \cite{lecun1995convolutional, abdel2014convolutional}.
 В головном мозге человека были обнаружены клетки, имеющие различную функциональную нагрузку \cite{matsugu2003subject}.
 Среди них были как простые клетки, которые реагировали на прямые линии, расположенные под различными углами, так и сложные клетки, которые активировались только при условии активации нескольких простых клеток.
 Описанные выше искусственные нейронные сети как раз используют данное разделение функций между нейронами.
-Общая схема работы свёрточной нейронной сети, описанная далее, показана на рисунке \ref{fig:cnn_typical}.
+Общая схема работы CNN, описанная далее, показана на рисунке \ref{fig:cnn_typical}.
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1.0\textwidth]{cnn_typical.png}
-	\caption{Общая схема работы свёрточной нейронной сети}
+	\caption{Общая схема работы CNN}
 	\label{fig:cnn_typical}
 \end{figure}
 
@@ -391,24 +391,24 @@ LSTM-блоки обычно содержат 3 <<вентиля>>, которы
 Такой формат входных данных отлично подходит для распознавания речи, так как в нём в качестве исходных данных также используется двухмерный параметрический портрет.
 Входные массивы, также как и промежуточные массивы, называются картами признаков.
 
-Далее вместо полностью связанных скрытых слоев используется другая структура сети, состоящая из чередующихся свёрточных и подвыборочных слоев.
-На рисунке \ref{fig:convolution_pooling} приведено наглядное представление операции свёртки и операции подвыборки.
+Далее вместо полностью связанных скрытых слоев используется другая структура сети, состоящая из чередующихся слоев свёртки и выборки.
+На рисунке \ref{fig:convolution_pooling} приведено наглядное представление операции свёртки и операции выборки.
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1.0\textwidth]{convolution_pooling.png}
-	\caption{Схема работы свёрточного и подвыборочного слоев свёрточной нейронной сети}
+	\caption{Схема работы слоев свёртки и выборки в CNN}
 	\label{fig:convolution_pooling}
 \end{figure}
 
 В операции свёртки каждый фрагмент карты признаков умножается на некоторую матрицу свёртки (ядро) поэлементно, а результат суммируется и записывается в соответствующую позицию выходной карты признаков.
 В каждом слое может применяться набор из нескольких матриц сверки, при этом проход каждым из фильтров создаёт уникальную карту признаков.
 Это делает искусственную нейронную сеть многоканальной, то есть имеется набор независимых карт признаков в каждом слое.
-Операция подвыборки производит уменьшение размерности сформированных карт признаков, позволяя ускорить дальнейшие вычисления и обеспечить инвариантность к масштабу входного сигнала.
+Операция выборки производит уменьшение размерности сформированных карт признаков, позволяя ускорить дальнейшие вычисления и обеспечить инвариантность к масштабу входного сигнала.
 
-По мере прохождения слоев свёртки и подвыборки, карта признаков уменьшается в размере, но увеличивается количество каналов.
+По мере прохождения слоев свёртки и выборки, карта признаков уменьшается в размере, но увеличивается количество каналов.
 Далее, после прохождения всех слоев карта представляется в виде скаляра или вектора, но количество её каналов достигает нескольких десятков, сотен или даже тысяч.
-На выходе нейронной сети дополнительно устанавливают один или несколько полносвязных слоев, на вход которым подаются все каналы из карты признаков.
+На выходе нейронной сети дополнительно устанавливают один или несколько полностью связанных слоёв, на вход которым подаются все каналы из карты признаков.
 
 Стандартным методом, используемым при обучении искусственных нейронных сетей, является алгоритм обратного распространения ошибки.
 Также может быть использована любая функция активации нейронов.
