--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -79,7 +79,7 @@
 	\item алгоритм оптимизации эталонов на основе метода главных компонент;
 	\item алгоритм оптимизации размерности параметрических портретов с использованием полиномов Чебышёва;
 	\item алгоритм распознавания команд по нескольким эталонам с использование байесовского подхода и метода комитетов;
-	\item алгоритм распознавания команд свёрточными нейронными сетями, способных обучаться на выборках малого размера.
+	\item алгоритм распознавания команд нейронными сетями глубокого обучения, способных обучаться на выборках малого размера.
 \end{itemize}
 
 \textbf{Практическая значимость.}
@@ -92,7 +92,7 @@
 	\item Разработан алгоритм оптимизации эталонов, отличающийся от существующих тем, что искомый эталон формируется как линейная комбинация главных компонент, оптимизирующая заданный критерий качества.
 	\item Разработан алгоритм оптимизации размерности параметрических портретов, отличающийся выделением наиболее значимых составляющих с использованием полиномов Чебышёва.
 	\item Разработан алгоритм распознавания команд по нескольким эталонам, отличающийся применением последовательного оценивания с расчётом апостериорных байесовских вероятностей.
-	\item Разработан алгоритм распознавания команд свёрточными нейронными сетями глубокого обучения, отличающийся от существующих обучением на выборке малого размера.
+	\item Разработан алгоритм распознавания команд нейронными сетями глубокого обучения, отличающийся от существующих обучением на выборке малого размера.
 \end{enumerate}
 
 \textbf{Достоверность результатов} обеспечивается корректным применением математической статистики, методов идентификации и анализа данных, подтверждением полученных теоретических результатов с помощью экспериментов, а также сравнением с известными результатами, ранее полученными другими авторами.
