--- a/common/concl.tex
+++ b/common/concl.tex
@@ -20,11 +20,11 @@
 	Работоспособность обоих разработанных алгоритмов подтверждается результатами тестирования.
 	При использовании 7 эталонов, полученных по записям различных дикторов, достигается заметное снижение процента ошибок в 1.5--2 раза --- средняя ошибка для алгоритма на основе формулы Байеса снизилась с 8.42 до 5.62~\%, а для алгоритма на основе метода комитетов до 5.3 и до 3.13~\% при использовании подстройки по времени.
 	\item Изучены и модифицированы алгоритмы распознавания речевых команд на основе искусственных нейронных сетей глубокого обучения.
-	Наилучшие результаты показала архитектура свёрточных нейронных сетей с двумя свёрточными и тремя полносвязными слоями.
+	Наилучшие результаты показала архитектура нейронных сетей CNN с двумя слоями свёртки и тремя полностью связанными слоями.
 	При обучении на словаре из 20 слов без шума на 7 дикторах средняя величина ошибки при распознавании <<чужих>> дикторов равна 0.6~\%.
 	При обучении в той же конфигурации, но на записях с добавленным шумом, величина ошибки достигает для <<чужого>> диктора 1.1~\%.
 	Эксперименты по распознаванию фраз при использовании обучающей выборки из записей 6 дикторов показали 4.2~\% ошибок для случая без шума и 7.0~\% для записей с шумом.
 	Получены положительные результаты в дикторозависимом варианте распознавания без шума и в условиях шума при использовании небольшого числа записей каждой команды в обучающей выборке.
 	Также получено значительное улучшение качества распознавания при добавлении всего нескольких реализаций каждой из речевых команд <<своего>> диктора в обучающую выборку, состоящую из записей <<чужих>> дикторов.
-	При использовании свёрточных нейронных сетей количество ошибок является заметно более низким, чем для других алгоритмов, единственный замеченный недостаток --- это длительное время обучения нейронной сети.
+	При использовании нейронных сетей CNN количество ошибок является заметно более низким, чем для других алгоритмов, единственный замеченный недостаток --- это длительное время обучения нейронной сети.
 \end{enumerate}
