исправил ругания на обход антиплагиата

--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -65,7 +65,7 @@ Direct Voice Input используется для управления вспо
 %\newpage
 %============================================================================================================================
 
-\section{Алгоритмы параметризации речевых сигналов} \label{sect1_2}
+\section{Способы параметризации голосовых сигналов} \label{sect1_2}
 
 Входные данные обычно представляют собой звуковой сигнал, как правило хранящийся в формате MP3 (Moving Picture Experts Group-1/2/2.5 Layer 3) или WAV (Waveform Audio File Format).
 Формат MP3 использует алгоритм сжатия звукового сигнала с потерями, некритичными для восприятия на слух на непрофессиональной аппаратуре, но существенными при использовании более качественной звуковой системы \cite{mp3}.
@@ -179,7 +179,7 @@ f_i = f_{min} + \frac{f_{max} - f_{min}}{N_{frb}} \left(i + \frac{1}{2} \right),
 %\newpage
 %============================================================================================================================
 
-\section{Анализ основных методов автоматического распознавания речи} \label{sect1_3}
+\section{Анализ основных подходов к автоматическому распознаванию речи} \label{sect1_3}
 
 Тремя основными методами распознавания речи являются: сравнение с эталоном, скрытые марковские модели и нейронные сети.
 Подробное описание данных методов содержится в следующих подразделах.
@@ -416,7 +416,7 @@ LSTM-блоки обычно содержат 3 <<вентиля>>, которы
 %\newpage
 %============================================================================================================================
 
-\section{Обзор используемых в работе математических методов} \label{sect1_4}
+\section{Обзор используемых в работе математических алгоритмов} \label{sect1_4}
 
 В данном подразделе будут рассмотрены математические методы, используемые далее в предложенных алгоритмах.
 
