--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -1,6 +1,6 @@
-\chapter{Разработка новых методов формирования эталонов для автоматического распознавания речевых команд} \label{chapt2}
+\chapter{Разработка новых алгоритмов формирования эталонов для автоматического распознавания речевых команд} \label{chapt2}
 
-\section{Исследования статистических свойств речевых команд} \label{sect2_1}
+\section{Исследования статистических свойств используемых команд} \label{sect2_1}
 
 Целью данного подраздела является оценка статистических свойств сигнала и результатов его частотно-временной параметризации.
 Ключевое значение имеет исследование закона распределения и обоснование того, что во многих случаях это распределение для исследуемых параметров является нормальным.
@@ -754,7 +754,7 @@ E_{syn} = k_0 a_0 + k_1 a_1 + \dots + k_{M'} a_{M'}.
 Тем не менее, вероятны и другие причины.
 
 Распознавание по любому из $L$ эталонов производится путём последовательного вычисления скалярной меры близости $Z$ между параметрическим портретом распознаваемого слова и каждым из $M$ субэталонов.
-Верной считается гипотеза, которая соответствует субэталону с мерой близости $Z$, имеющей экстремум.
+Верной считается гипотеза, которая соответствует эталону слова с мерой близости $Z$, имеющей экстремум.
 Традиционный порядок распознавания по единственному эталону соответствует этому \cite{rabiner1993fundamentals}.
 В качестве меры близости может выбираться евклидово расстояние или расстояние Махаланобиса между векторами параметрического портрета \cite{rabiner1993fundamentals}, коэффициент корреляции \cite{korsun2016automatic}, Z-преобразование Фишера от коэффициента корреляции \cite{korsun2017recognition} и так далее.
 Необходимо сформулировать задачу создания более качественной с математической точки зрения процедуры сравнения, позволяющей получить вероятностные оценки каждой гипотезы.
