исправил ошибки обхода антиплагиата в автореферате

--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -384,9 +384,9 @@ P(H_i|A_k^{\Delta Z}) = \frac{P(H_i) P(A_k|H_i) P(\Delta Z|H_i)}{\sum_{j=1}^M P(
 Они показали неудовлетворительные результаты, с количеством ошибок в несколько раз больше чем в ранее приведённых методах.
 
 % без шума
-После этого были апробированы свёрточные нейронные сети глубокого обучения.
+После этого были апробированы нейронные сети глубокого обучения.
 Для них была выбрана оптимальная архитектура сети, имеющая по 2 слоя свёртки и подвыборки, за которыми идут 3 полносвязных слоя.
-Между полносвязными слоями производится регуляризация, состоящая в случайном выбрасывании определённого количества нейронов в процессе обучения.
+Между полностью связанными слоями производится регуляризация, состоящая в случайном выбрасывании определённого количества нейронов в процессе обучения.
 Такой приём предотвращает переобучение и повышает стабильность результатов.
 Структура сети показана на рисунке \ref{fig:4_1}.
 
