добавил подпись на первую страницу

--- a/Dissertation/title.tex
+++ b/Dissertation/title.tex
@@ -20,7 +20,8 @@
 }{
 \begin{flushright}
 На правах рукописи \\
-\textsl {УДК \thesisUdk}
+\textsl {УДК \thesisUdk} \\
+\includegraphics[height=1.7cm]{sign.png}
 \end{flushright}
 }
 %
